added some files

--- a/src/product_pages/index.html
+++ b/src/product_pages/index.html
@@ -78,6 +78,8 @@
     <footer>&copy;NOT a real business</footer>
 
     <script src="../js/product.js" type="module"></script>
+<script type="module" src="/src/js/main.js"></script>
+    
 </body>
 
 </html>
