--- a/src/index.html
+++ b/src/index.html
@@ -114,5 +114,7 @@
       &copy;2025 ⛺ SleepOutside ⛺ WDD 330 ⛺ BYU-Idaho for BYU-Pathway
       Worldwide Online
     </footer>
+    
+    <script type="module" src="/src/js/main.js"></script>
   </body>
 </html>
