--- a/src/index.html
+++ b/src/index.html
@@ -60,7 +60,7 @@
         </div>
       </div>
 
-      <section class="products">
+      <!-- <section class="products">
         <h2>Top Products</h2>
         <ul class="product-list">
           <li class="product-card">
@@ -108,6 +108,11 @@
             </a>
           </li>
         </ul>
+      </section> -->
+      <section>
+        
+        <ul id="product-list"></ul>
+
       </section>
     </main>
     <footer>
@@ -115,6 +120,6 @@
       Worldwide Online
     </footer>
     
-    <script type="module" src="/src/js/main.js"></script>
+    <script type="module" src="./js/main.js"></script>
   </body>
 </html>
