worked on week 3 activity

--- a/src/cart/index.html
+++ b/src/cart/index.html
@@ -94,5 +94,7 @@
     </main>
 
     <footer>&copy;NOT a real business</footer>
+    <script type="module" src="./main.js"></script>
+
   </body>
 </html>
