--- a/src/product_pages/cedar-ridge-rimrock-2.html
+++ b/src/product_pages/cedar-ridge-rimrock-2.html
@@ -81,6 +81,7 @@
         </div>
       </section>
     </main>
+    <script type="module" src="./main.js"></script>
 
     <footer>&copy;NOT a real business</footer>
   </body>
