--- a/src/product_pages/marmot-ajax-3.html
+++ b/src/product_pages/marmot-ajax-3.html
@@ -83,5 +83,7 @@
     </main>
 
     <footer>&copy;NOT a real business</footer>
+    <script type="module" src="./main.js"></script>
+
   </body>
 </html>
