--- a/src/product_pages/northface-talus-4.html
+++ b/src/product_pages/northface-talus-4.html
@@ -84,5 +84,7 @@
     </main>
 
     <footer>&copy;NOT a real business</footer>
+    <script type="module" src="./main.js"></script>
+
   </body>
 </html>
