feat: Code formatted and linted. Ready for week 3 submission

--- a/src/index.html
+++ b/src/index.html
@@ -30,9 +30,43 @@
         </div>
       </div>
 
-      <section class="products">
-        <h2>Top Products</h2>
-        <ul class="product-list"></ul>
+      <section class="category-grid">
+        <a href="product_listing/index.html?category=tents">
+          <div class="category-card">
+            <img src="/images/category-tents-1.svg" alt="Tents category icon" />
+            <h3>Tents</h3>
+          </div>
+        </a>
+
+        <a href="product_listing/index.html?category=backpacks">
+          <div class="category-card">
+            <img
+              src="/images/category-backpacks-2.svg"
+              alt="Backpacks category icon"
+            />
+            <h3>Backpacks</h3>
+          </div>
+        </a>
+
+        <a href="product_listing/index.html?category=sleeping-bags">
+          <div class="category-card">
+            <img
+              src="/images/category-sleepingbags-3.svg"
+              alt="Sleeping Bags category icon"
+            />
+            <h3>Sleeping Bags</h3>
+          </div>
+        </a>
+
+        <a href="product_listing/index.html?category=hammocks">
+          <div class="category-card">
+            <img
+              src="/images/category-hammocks-4.svg"
+              alt="Hammocks category icon"
+            />
+            <h3>Hammocks</h3>
+          </div>
+        </a>
       </section>
     </main>
 
