--- a/src/product_listing/index.html
+++ b/src/product_listing/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sleep Outside | Product Listing</title>
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
     <script src="../js/product-listining.mjs" type="module"></script>
   </head>
   <body>
@@ -12,6 +12,14 @@
 
     <main class="divider">
       <h2 class="title">Top Products: <span id="category-name"></span></h2>
+
+      <div class="sort-container">
+        <label for="sort-select">Sort by: </label>
+        <select id="sort-select">
+          <option value="name">Name (A-Z)</option>
+          <option value="price">Price (Low to High)</option>
+        </select>
+      </div>
 
       <ul class="product-list"></ul>
     </main>
