wroked on seach feature

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sleep Outside | Home</title>
     <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="css/seach-feature.css">
   </head>
 
   <body>
@@ -59,6 +60,13 @@
           </p>
         </div>
       </div>
+
+      <!--added search bar to the site-->
+      <form id="searchForm" class="search-form">
+        <input type="text" id="searchInput" placeholder="Search products..." required />
+        <button type="submit">Search</button>
+      </form>
+      </nav>
 
       <!-- <section class="products">
         <h2>Top Products</h2>
