--- a/src/cart/index.html
+++ b/src/cart/index.html
@@ -52,6 +52,11 @@
             <p class="cart-card__price">$199.99</p>
           </li> -->
         </ul>
+
+        <div class="cart-footer hide">
+          <p class="cart-total">Total: $00.00</p>
+          <button id="checkoutButton">Checkout</button>
+        </div>
       </section>
     </main>
 
