--- a/src/cart/checkout.html
+++ b/src/cart/checkout.html
@@ -61,7 +61,7 @@
       <section class="checkout-container">
         <h2>Review & Place your Order</h2>
 
-        <form name="checkout" class="checkout-form">
+        <form name="checkout" class="checkout" novalidate>
           <fieldset>
             <legend>Shipping Address</legend>
             <label for="fname">First Name</label>
@@ -86,10 +86,27 @@
           <fieldset>
             <legend>Payment</legend>
             <label for="cardNumber">Credit Card Number</label>
-            <input type="text" name="cardNumber" id="cardNumber" required />
+            <input
+              type="text"
+              name="cardNumber"
+              id="cardNumber"
+              required
+              pattern="[0-9]{16}"
+              minlength="16"
+              maxlength="16"
+              title="Please enter a 16-digit card number"
+            />
 
             <label for="expiration">expiration Date</label>
-            <input type="text" name="expiration" id="expiration" required />
+            <input
+              type="text"
+              name="expiration"
+              id="expiration"
+              required
+              placeholder="MM/YY"
+              pattern="(0[1-9]1[0-2])\/[0-9]{2}"
+              title="Please enter a date in MM/YY format (e.g. 12/25)"
+            />
 
             <label for="code">Security Code</label>
             <input type="text" name="code" id="code" required />
